<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBkg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tvh"
        android:textAlignment="center"
        android:gravity="bottom"
        android:paddingBottom="@dimen/pad"
        android:paddingStart="@dimen/pad"
        android:paddingEnd="@dimen/pad"
        android:textSize="@dimen/tvts"
        android:textColor="@color/white"
        android:layout_gravity="top|center"
        android:text="" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tvh2"
        android:gravity="end|top"
        android:textSize="@dimen/ts"
        android:textColor="@color/gray"
        android:paddingStart="@dimen/pad"
        android:paddingEnd="@dimen/pad"
        android:layout_gravity="top|center"
        android:text="" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/r0c0"
            style="@style/buttonStyle"
            android:text="@string/num7"
            android:layout_row="0"
            android:layout_column="0"
            />
        <Button
            android:id="@+id/r0c1"
            style="@style/buttonStyle"
            android:text="@string/num8"
            android:layout_row="0"
            android:layout_column="1"
            />
        <Button
            android:id="@+id/r0c2"
            style="@style/buttonStyle"
            android:text="@string/num9"
            android:layout_row="0"
            android:layout_column="2"
            />
        <Button
            android:id="@+id/r0c3"
            style="@style/buttonStyle"
            android:text="@string/div"
            android:layout_row="0"
            android:layout_column="3"
            android:background="@color/colorButt2"
            />

        <Button
            android:id="@+id/r1c0"
            style="@style/buttonStyle"
            android:text="@string/num4"
            android:layout_row="1"
            android:layout_column="0"
            />
        <Button
            android:id="@+id/r1c1"
            style="@style/buttonStyle"
            android:text="@string/num5"
            android:layout_row="1"
            android:layout_column="1"
            />
        <Button
            android:id="@+id/r1c2"
            style="@style/buttonStyle"
            android:text="@string/num6"
            android:layout_row="1"
            android:layout_column="2"
            />
        <Button
            android:id="@+id/r1c3"
            style="@style/buttonStyle"
            android:text="@string/mul"
            android:layout_row="1"
            android:layout_column="3"
            android:background="@color/colorButt2"
            />

        <Button
            android:id="@+id/r2c0"
            style="@style/buttonStyle"
            android:text="@string/num1"
            android:layout_row="2"
            android:layout_column="0"
            />
        <Button
            android:id="@+id/r2c1"
            style="@style/buttonStyle"
            android:text="@string/num2"
            android:layout_row="2"
            android:layout_column="1"
            />
        <Button
            android:id="@+id/r2c2"
            style="@style/buttonStyle"
            android:text="@string/num3"
            android:layout_row="2"
            android:layout_column="2"
            />
        <Button
            android:id="@+id/r2c3"
            style="@style/buttonStyle"
            android:text="@string/sub"
            android:layout_row="2"
            android:layout_column="3"
            android:background="@color/colorButt2"
            />

        <Button
            android:id="@+id/r3c0"
            style="@style/buttonStyle"
            android:text="@string/period"
            android:layout_row="3"
            android:layout_column="0"
            />
        <Button
            android:id="@+id/r3c1"
            style="@style/buttonStyle"
            android:text="@string/num0"
            android:layout_row="3"
            android:layout_column="1"
            />
        <Button
            android:id="@+id/r3c2"
            style="@style/buttonStyle"
            android:text="@string/plusminus"
            android:layout_row="3"
            android:layout_column="2"
            />
        <Button
            android:id="@+id/r3c3"
            style="@style/buttonStyle"
            android:text="@string/add"
            android:layout_row="3"
            android:layout_column="3"
            android:background="@color/colorButt2"
            />

        <Button
            android:id="@+id/r4c0"
            style="@style/buttonStyle"
            android:text="@string/CE"
            android:layout_row="4"
            android:layout_column="0"
            android:background="@color/colorButt2"
            />
        <Button
            android:id="@+id/r4c1"
            style="@style/buttonStyle"
            android:text="@string/C"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:background="@color/colorButt2"
            />
        <Button
            android:id="@+id/r4c2"
            style="@style/buttonStyle"
            android:text="@string/equals"
            android:layout_row="4"
            android:layout_column="3"
            android:background="@color/colorButt2"
            />





    </GridLayout>

</LinearLayout>